[gd_scene load_steps=2 format=3 uid="uid://tmmd7lcqoful"]

[ext_resource type="Script" path="res://scripts/objects/components/ship_timers.gd" id="1_q0qce"]

[node name="ShipTimers" type="Node"]
script = ExtResource("1_q0qce")

[node name="Primary" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Special" type="Timer" parent="."]
one_shot = true

[node name="DashLength" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="HitLag" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="Primary" to="." method="_on_primary_timer_2_timeout"]
[connection signal="timeout" from="Special" to="." method="_on_special_timeout"]
[connection signal="timeout" from="DashLength" to="." method="_on_dash_length_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cool_timeout"]
[connection signal="timeout" from="HitLag" to="." method="_on_hit_lag_timeout"]
